# trice

./: README.md  pyproject.toml
examples/: get_codecommit_project_info.py  get_s3_project_info.py
